modified:   FinancesApp/controllers/appController.py 	new file:   FinancesApp/controllers/homeController.py 	new file:   FinancesApp/controllers/regController.py 	modified:   FinancesApp/models/appModel.py 	modified:   FinancesApp/models/consts.py 	modified:   FinancesApp/models/structs.py 	modified:   FinancesApp/models/tools.py 	modified:   FinancesApp/src/cmds.bat 	modified:   FinancesApp/src/ui/HomeForm.ui 	new file:   FinancesApp/src/ui/LoginForm.ui 	modified:   FinancesApp/src/ui/RegForm.ui 	modified:   FinancesApp/src/ui/auto/resource_rc.py 	modified:   FinancesApp/src/ui/auto/ui_HomeForm.py 	new file:   FinancesApp/src/ui/auto/ui_LoginForm.py 	modified:   FinancesApp/src/ui/auto/ui_RegForm.py 	new file:   FinancesApp/src/ui/imgs/dark-logout.svg 	new file:   FinancesApp/src/ui/imgs/light-logout.svg 	modified:   FinancesApp/src/ui/resource.qrc 	modified:   FinancesApp/views/appView.py 	new file:   FinancesApp/views/homeView.py 	new file:   FinancesApp/views/loginView.py 	modified:   FinancesApp/views/regView.py

--- a/FinancesApp/src/ui/HomeForm.ui
+++ b/FinancesApp/src/ui/HomeForm.ui
@@ -135,6 +135,13 @@
        </widget>
       </item>
       <item>
+       <widget class="Line" name="line_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="verticalSpacer_2">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -187,6 +194,39 @@
         <property name="icon">
          <iconset resource="resource.qrc">
           <normaloff>:/root/imgs/light-gear.svg</normaloff>:/root/imgs/light-gear.svg</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>25</width>
+          <height>25</height>
+         </size>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="Line" name="line">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="btnLogout">
+        <property name="font">
+         <font>
+          <family>Segoe UI</family>
+          <pointsize>11</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>Sair                    </string>
+        </property>
+        <property name="icon">
+         <iconset resource="resource.qrc">
+          <normaloff>:/root/imgs/light-logout.svg</normaloff>:/root/imgs/light-logout.svg</iconset>
         </property>
         <property name="iconSize">
          <size>
