--- a/FinancesApp/src/ui/RegForm.ui
+++ b/FinancesApp/src/ui/RegForm.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>823</width>
-    <height>465</height>
+    <width>849</width>
+    <height>542</height>
    </rect>
   </property>
   <property name="font">
@@ -127,7 +127,7 @@
          <item>
           <widget class="QPushButton" name="btnDelete">
            <property name="toolTip">
-            <string>deletar registros selecionados</string>
+            <string>excluir registros selecionados</string>
            </property>
            <property name="icon">
             <iconset resource="resource.qrc">
@@ -358,6 +358,43 @@
           </spacer>
          </item>
          <item>
+          <widget class="QPushButton" name="btnClear">
+           <property name="toolTip">
+            <string>retornar valores iniciais</string>
+           </property>
+           <property name="icon">
+            <iconset resource="resource.qrc">
+             <normaloff>:/root/imgs/light-eraser.svg</normaloff>:/root/imgs/light-eraser.svg</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>25</width>
+             <height>25</height>
+            </size>
+           </property>
+           <property name="flat">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btnSave">
+           <property name="icon">
+            <iconset resource="resource.qrc">
+             <normaloff>:/root/imgs/light-save.svg</normaloff>:/root/imgs/light-save.svg</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>25</width>
+             <height>25</height>
+            </size>
+           </property>
+           <property name="flat">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QPushButton" name="btnEdit">
            <property name="text">
             <string/>
@@ -380,7 +417,7 @@
          <item>
           <widget class="QPushButton" name="btnDeleteDetails">
            <property name="toolTip">
-            <string>deletar registros selecionados</string>
+            <string>excluir registro</string>
            </property>
            <property name="icon">
             <iconset resource="resource.qrc">
@@ -471,92 +508,6 @@
            </item>
           </widget>
          </item>
-         <item row="8" column="0" colspan="4">
-          <widget class="QWidget" name="widDetailBtns" native="true">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <layout class="QHBoxLayout" name="horizontalLayout_6">
-            <property name="spacing">
-             <number>10</number>
-            </property>
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-            <property name="topMargin">
-             <number>0</number>
-            </property>
-            <property name="rightMargin">
-             <number>0</number>
-            </property>
-            <property name="bottomMargin">
-             <number>0</number>
-            </property>
-            <item>
-             <spacer name="horizontalSpacer_6">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item>
-             <widget class="QPushButton" name="btnClear">
-              <property name="text">
-               <string>limpar</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QPushButton" name="btnSave">
-              <property name="text">
-               <string>salvar</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer name="horizontalSpacer_7">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-           </layout>
-          </widget>
-         </item>
-         <item row="6" column="0">
-          <widget class="QLabel" name="label_7">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="font">
-            <font>
-             <family>Segoe UI</family>
-             <pointsize>11</pointsize>
-            </font>
-           </property>
-           <property name="text">
-            <string>Descrição</string>
-           </property>
-          </widget>
-         </item>
          <item row="5" column="1">
           <widget class="QPushButton" name="btnAddCat">
            <property name="font">
@@ -631,8 +582,14 @@
            </property>
           </widget>
          </item>
-         <item row="5" column="0">
-          <widget class="QLabel" name="label_9">
+         <item row="6" column="0">
+          <widget class="QLabel" name="label_7">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="font">
             <font>
              <family>Segoe UI</family>
@@ -640,17 +597,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Categoria</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1" colspan="3">
-          <widget class="QLineEdit" name="leTitle">
-           <property name="font">
-            <font>
-             <family>Segoe UI</family>
-             <pointsize>11</pointsize>
-            </font>
+            <string>Descrição</string>
            </property>
           </widget>
          </item>
@@ -677,8 +624,18 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="label_5">
+         <item row="1" column="1" colspan="3">
+          <widget class="QLineEdit" name="leTitle">
+           <property name="font">
+            <font>
+             <family>Segoe UI</family>
+             <pointsize>11</pointsize>
+            </font>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="0">
+          <widget class="QLabel" name="label_9">
            <property name="font">
             <font>
              <family>Segoe UI</family>
@@ -686,33 +643,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Título</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="1" colspan="3">
-          <widget class="QDoubleSpinBox" name="dsVal">
-           <property name="font">
-            <font>
-             <family>Segoe UI</family>
-             <pointsize>11</pointsize>
-            </font>
-           </property>
-           <property name="maximum">
-            <double>999999999999.000000000000000</double>
-           </property>
-          </widget>
-         </item>
-         <item row="4" column="0">
-          <widget class="QLabel" name="label_8">
-           <property name="font">
-            <font>
-             <family>Segoe UI</family>
-             <pointsize>11</pointsize>
-            </font>
-           </property>
-           <property name="text">
-            <string>Cartão</string>
+            <string>Categoria</string>
            </property>
           </widget>
          </item>
@@ -729,8 +660,8 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="0">
-          <widget class="QLabel" name="label_4">
+         <item row="4" column="0">
+          <widget class="QLabel" name="label_8">
            <property name="font">
             <font>
              <family>Segoe UI</family>
@@ -738,7 +669,33 @@
             </font>
            </property>
            <property name="text">
-            <string>Valor</string>
+            <string>Cartão</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1" colspan="3">
+          <widget class="QDoubleSpinBox" name="dsVal">
+           <property name="font">
+            <font>
+             <family>Segoe UI</family>
+             <pointsize>11</pointsize>
+            </font>
+           </property>
+           <property name="maximum">
+            <double>999999999999.000000000000000</double>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_5">
+           <property name="font">
+            <font>
+             <family>Segoe UI</family>
+             <pointsize>11</pointsize>
+            </font>
+           </property>
+           <property name="text">
+            <string>Título</string>
            </property>
           </widget>
          </item>
@@ -752,10 +709,10 @@
            </property>
           </widget>
          </item>
-         <item row="5" column="2">
-          <widget class="QPushButton" name="btnEraseCat">
+         <item row="4" column="2">
+          <widget class="QPushButton" name="btnEraseCard">
            <property name="toolTip">
-            <string>deletar registros selecionados</string>
+            <string>remover seleção</string>
            </property>
            <property name="styleSheet">
             <string notr="true">background-color: transparent</string>
@@ -775,10 +732,23 @@
            </property>
           </widget>
          </item>
-         <item row="4" column="2">
-          <widget class="QPushButton" name="btnEraseCard">
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_4">
+           <property name="font">
+            <font>
+             <family>Segoe UI</family>
+             <pointsize>11</pointsize>
+            </font>
+           </property>
+           <property name="text">
+            <string>Valor</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="2">
+          <widget class="QPushButton" name="btnEraseCat">
            <property name="toolTip">
-            <string>deletar registros selecionados</string>
+            <string>remover seleção</string>
            </property>
            <property name="styleSheet">
             <string notr="true">background-color: transparent</string>
