--- a/application/src/ui/LoginForm.ui
+++ b/application/src/ui/LoginForm.ui
@@ -283,5 +283,22 @@
   </layout>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>lePassword</sender>
+   <signal>returnPressed()</signal>
+   <receiver>btnAcessar</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>199</x>
+     <y>126</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>199</x>
+     <y>200</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
