modified:   application/controllers/appController.py 	modified:   application/controllers/configController.py 	modified:   application/controllers/mainController.py 	modified:   application/models/appModel.py 	modified:   application/models/configModel.py 	modified:   application/models/tableData.py 	modified:   application/src/consts.py 	modified:   application/src/structs.py 	modified:   application/src/tests/tableForm.py 	modified:   application/src/ui/ConfigForm.ui 	modified:   application/src/ui/auto/resource_rc.py 	modified:   application/src/ui/auto/ui_ConfigForm.py 	new file:   application/src/ui/imgs/icons/eye-off.svg 	new file:   application/src/ui/imgs/icons/eye.svg 	modified:   application/src/ui/imgs/icons/next.svg 	modified:   application/src/ui/imgs/icons/prev.svg 	modified:   application/src/ui/imgs/resource.qrc 	modified:   application/views/components/dialog.py 	modified:   application/views/components/table.py 	modified:   application/views/configView.py 	modified:   application/views/mainPageView.py 	modified:   server/database.py 	modified:   server/server.py

--- a/application/src/ui/imgs/resource.qrc
+++ b/application/src/ui/imgs/resource.qrc
@@ -1,5 +1,7 @@
 <RCC>
   <qresource prefix="root">
+    <file>icons/eye.svg</file>
+    <file>icons/eye-off.svg</file>
     <file>icons/next.svg</file>
     <file>icons/prev.svg</file>
     <file>icons/sliders.svg</file>
