--- a/application/src/ui/ConfigForm.ui
+++ b/application/src/ui/ConfigForm.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>743</width>
-    <height>700</height>
+    <height>699</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -37,10 +37,10 @@
         <x>0</x>
         <y>0</y>
         <width>741</width>
-        <height>698</height>
+        <height>697</height>
        </rect>
       </property>
-      <layout class="QGridLayout" name="gridLayout">
+      <layout class="QGridLayout" name="gridLayout" columnstretch="1,1">
        <property name="leftMargin">
         <number>0</number>
        </property>
@@ -125,7 +125,63 @@
               </widget>
              </item>
              <item>
-              <widget class="QLineEdit" name="leSenhaAtual"/>
+              <widget class="QWidget" name="widget_2" native="true">
+               <layout class="QHBoxLayout" name="horizontalLayout_3">
+                <property name="leftMargin">
+                 <number>0</number>
+                </property>
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="rightMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>0</number>
+                </property>
+                <item>
+                 <widget class="QLineEdit" name="leSenhaAtual">
+                  <property name="echoMode">
+                   <enum>QLineEdit::Password</enum>
+                  </property>
+                  <property name="dragEnabled">
+                   <bool>false</bool>
+                  </property>
+                  <property name="clearButtonEnabled">
+                   <bool>false</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="btnSenhaAtualHide">
+                  <property name="text">
+                   <string/>
+                  </property>
+                  <property name="icon">
+                   <iconset resource="imgs/resource.qrc">
+                    <normaloff>:/root/icons/eye-off.svg</normaloff>:/root/icons/eye-off.svg</iconset>
+                  </property>
+                  <property name="flat">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="btnSenhaAtualShow">
+                  <property name="text">
+                   <string/>
+                  </property>
+                  <property name="icon">
+                   <iconset resource="imgs/resource.qrc">
+                    <normaloff>:/root/icons/eye.svg</normaloff>:/root/icons/eye.svg</iconset>
+                  </property>
+                  <property name="flat">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
              </item>
             </layout>
            </widget>
@@ -138,22 +194,7 @@
               <pointsize>12</pointsize>
              </font>
             </property>
-            <layout class="QVBoxLayout" name="verticalLayout_5">
-             <property name="spacing">
-              <number>0</number>
-             </property>
-             <property name="leftMargin">
-              <number>10</number>
-             </property>
-             <property name="topMargin">
-              <number>10</number>
-             </property>
-             <property name="rightMargin">
-              <number>10</number>
-             </property>
-             <property name="bottomMargin">
-              <number>10</number>
-             </property>
+            <layout class="QVBoxLayout" name="verticalLayout_2">
              <item>
               <widget class="QLabel" name="label_7">
                <property name="text">
@@ -162,7 +203,63 @@
               </widget>
              </item>
              <item>
-              <widget class="QLineEdit" name="leSenhaNova"/>
+              <widget class="QWidget" name="widget_3" native="true">
+               <layout class="QHBoxLayout" name="horizontalLayout_4">
+                <property name="leftMargin">
+                 <number>0</number>
+                </property>
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="rightMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>0</number>
+                </property>
+                <item>
+                 <widget class="QLineEdit" name="leSenhaNova">
+                  <property name="echoMode">
+                   <enum>QLineEdit::Password</enum>
+                  </property>
+                  <property name="dragEnabled">
+                   <bool>false</bool>
+                  </property>
+                  <property name="clearButtonEnabled">
+                   <bool>false</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="btnSenhaNovaHide">
+                  <property name="text">
+                   <string/>
+                  </property>
+                  <property name="icon">
+                   <iconset resource="imgs/resource.qrc">
+                    <normaloff>:/root/icons/eye-off.svg</normaloff>:/root/icons/eye-off.svg</iconset>
+                  </property>
+                  <property name="flat">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="btnSenhaNovaShow">
+                  <property name="text">
+                   <string/>
+                  </property>
+                  <property name="icon">
+                   <iconset resource="imgs/resource.qrc">
+                    <normaloff>:/root/icons/eye.svg</normaloff>:/root/icons/eye.svg</iconset>
+                  </property>
+                  <property name="flat">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
              </item>
             </layout>
            </widget>
@@ -175,22 +272,7 @@
               <pointsize>12</pointsize>
              </font>
             </property>
-            <layout class="QVBoxLayout" name="verticalLayout_6">
-             <property name="spacing">
-              <number>0</number>
-             </property>
-             <property name="leftMargin">
-              <number>10</number>
-             </property>
-             <property name="topMargin">
-              <number>10</number>
-             </property>
-             <property name="rightMargin">
-              <number>10</number>
-             </property>
-             <property name="bottomMargin">
-              <number>10</number>
-             </property>
+            <layout class="QVBoxLayout" name="verticalLayout_5">
              <item>
               <widget class="QLabel" name="label_8">
                <property name="text">
@@ -199,7 +281,63 @@
               </widget>
              </item>
              <item>
-              <widget class="QLineEdit" name="leSenhaConfirm"/>
+              <widget class="QWidget" name="widget_4" native="true">
+               <layout class="QHBoxLayout" name="horizontalLayout_5">
+                <property name="leftMargin">
+                 <number>0</number>
+                </property>
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="rightMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>0</number>
+                </property>
+                <item>
+                 <widget class="QLineEdit" name="leSenhaConfirm">
+                  <property name="echoMode">
+                   <enum>QLineEdit::Password</enum>
+                  </property>
+                  <property name="dragEnabled">
+                   <bool>false</bool>
+                  </property>
+                  <property name="clearButtonEnabled">
+                   <bool>false</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="btnSenhaConfirmHide">
+                  <property name="text">
+                   <string/>
+                  </property>
+                  <property name="icon">
+                   <iconset resource="imgs/resource.qrc">
+                    <normaloff>:/root/icons/eye-off.svg</normaloff>:/root/icons/eye-off.svg</iconset>
+                  </property>
+                  <property name="flat">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="btnSenhaConfirmShow">
+                  <property name="text">
+                   <string/>
+                  </property>
+                  <property name="icon">
+                   <iconset resource="imgs/resource.qrc">
+                    <normaloff>:/root/icons/eye.svg</normaloff>:/root/icons/eye.svg</iconset>
+                  </property>
+                  <property name="flat">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
              </item>
             </layout>
            </widget>
@@ -498,7 +636,7 @@
                 <string notr="true">color: #5E5E5E;</string>
                </property>
                <property name="text">
-                <string>Acesso ao Perfil</string>
+                <string>Acessos de Terceiros</string>
                </property>
               </widget>
              </item>
@@ -509,7 +647,7 @@
                </property>
                <property name="sizeHint" stdset="0">
                 <size>
-                 <width>529</width>
+                 <width>0</width>
                  <height>20</height>
                 </size>
                </property>
@@ -530,7 +668,7 @@
           </item>
           <item>
            <widget class="QWidget" name="widget_16" native="true">
-            <layout class="QHBoxLayout" name="acessoPerfilLayout">
+            <layout class="QHBoxLayout" name="acessoPerfilLayout" stretch="1,1">
              <property name="leftMargin">
               <number>0</number>
              </property>
@@ -544,10 +682,24 @@
               <number>0</number>
              </property>
              <item>
-              <widget class="QWidget" name="widEdicao" native="true"/>
+              <widget class="QWidget" name="widEdicao" native="true">
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>0</height>
+                </size>
+               </property>
+              </widget>
              </item>
              <item>
-              <widget class="QWidget" name="widVisu" native="true"/>
+              <widget class="QWidget" name="widVisu" native="true">
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>0</height>
+                </size>
+               </property>
+              </widget>
              </item>
             </layout>
            </widget>
@@ -556,10 +708,24 @@
         </widget>
        </item>
        <item row="1" column="0">
-        <widget class="QWidget" name="widPerfis" native="true"/>
+        <widget class="QWidget" name="widPerfis" native="true">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
+        </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QWidget" name="widShare" native="true"/>
+        <widget class="QWidget" name="widShare" native="true">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -573,9 +739,6 @@
   <tabstop>btnCancelarUser</tabstop>
   <tabstop>btnSalvarUser</tabstop>
   <tabstop>btnEditarUser</tabstop>
-  <tabstop>leSenhaAtual</tabstop>
-  <tabstop>leSenhaNova</tabstop>
-  <tabstop>leSenhaConfirm</tabstop>
   <tabstop>btnCancelarSenha</tabstop>
   <tabstop>btnSalvarSenha</tabstop>
   <tabstop>btnAtualizarSenha</tabstop>
